--- a/config/boards/shields/newage.dtsi
+++ b/config/boards/shields/newage.dtsi
@@ -4,6 +4,7 @@
     chosen {
         zephyr,display = &oled;
         zmk,kscan = &kscan0;
+        zmk,matrix-transform = &default_tansform;
     };
 
     default_transform: keymap_transform_0 {
