--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: newAge_left
+    shield: newage_left
   - board: nice_nano_v2
-    shield: newAge_right
+    shield: newage_right
   - board: nice_nano_v2
     shield: settings_reset
