--- a/config/boards/shields/newage/newage.dtsi
+++ b/config/boards/shields/newage/newage.dtsi
@@ -4,7 +4,7 @@
     chosen {
         zephyr,display = &oled;
         zmk,kscan = &kscan0;
-        zmk,matrix-transform = &default_tansform;
+        zmk,matrix-transform = &default_transform;
     };
 
     default_transform: keymap_transform_0 {
