--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: newage_left
+    shield: newage_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: newage_right
+    shield: newage_right nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: settings_reset
