Added nice!view spi newage.dtsi

--- a/config/boards/shields/newage/newage.dtsi
+++ b/config/boards/shields/newage/newage.dtsi
@@ -2,7 +2,7 @@
 
 / {
     chosen {
-        zephyr,display = &oled;
+        zephyr,display = &nice_view;
         zmk,kscan = &kscan0;
         zmk,matrix-transform = &default_transform;
     };
@@ -60,22 +60,13 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                 RC(2,6) RC(2,7) 
     };
 };
 
-&pro_micro_i2c {
+&nice_view_spi {
     status = "okay";
-
-    oled: ssd1306@3c {
-        compatible = "solomon,ssd1306fb";
-        reg = <0x3c>;
-        width = <128>;
-        height = <32>;
-        segment-offset = <0>;
-        page-offset = <0>;
-        display-offset = <0>;
-        multiplex-ratio = <31>;
-        segment-remap;
-        com-invdir;
-        com-sequential;
-        inversion-on;
-        prechargep = <0x22>;
+    nice_view: ls0xx@0 {
+        compatible = "sharp,ls0xx";
+        spi-max-frequency = <1000000>;
+        reg = <0>;
+        width = <160>;
+        height = <68>;
     };
 };
