--- a/boards/shields/newage/newage.dtsi
+++ b/boards/shields/newage/newage.dtsi
@@ -2,7 +2,7 @@
 
 / {
     chosen {
-//      zephyr,display = &oled;
+        zephyr,display = &nice_view;
         zmk,kscan = &kscan0;
         zmk,matrix-transform = &default_transform;
     };
