--- a/boards/shields/newage/newage.dtsi
+++ b/boards/shields/newage/newage.dtsi
@@ -60,10 +60,32 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                 RC(2,6) RC(2,7) 
     };
 };
 
-&pro_micro_i2c {
-    status = "disabled";
+&pinctrl {
+    spi0_default: spi0_default {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 20)>,
+                <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+                <NRF_PSEL(SPIM_MISO, 0, 25)>;
+        };
+    };
+    spi0_sleep: spi0_sleep {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 20)>,
+                <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+                <NRF_PSEL(SPIM_MISO, 0, 25)>;
+            low-power-enable;
+        };
+    };
 };
 
-nice_view_spi: &spi1 {
-        cs-gpios = <&pro_micro 0 GPIO_ACTIVE_HIGH>;
+nice_view_spi: &spi0 {
+    compatible = "nordic,nrf-spim";
+    pinctrl-0 = <&spi0_default>;
+    pinctrl-1 = <&spi0_sleep>;
+    pinctrl-names = "default", "sleep";
+    cs-gpios = <&pro_micro 0 GPIO_ACTIVE_HIGH>;
+};
+
+&pro_micro_i2c {
+    status = "disabled";
 };
