--- a/config/newage.conf
+++ b/config/newage.conf
@@ -1,5 +1,7 @@
 # Uncomment the following line to enable the Newage nice!view Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_INVERT=y
+CONFIG_NICE_VIEW_WIDGET_STATUS=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
