--- a/config/newage.conf
+++ b/config/newage.conf
@@ -1,4 +1,4 @@
-# Uncomment the following line to enable the Newage nice!view Display
+# Uncomment the following line to enable the newage nice!view Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_INVERT=y
 CONFIG_NICE_VIEW_WIDGET_STATUS=y
