--- a/config/newage.conf
+++ b/config/newage.conf
@@ -4,6 +4,7 @@ CONFIG_ZMK_DISPLAY_INVERT=y
 CONFIG_NICE_VIEW_WIDGET_STATUS=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+CONFIG_CUSTOM_ANIMATION_SPEED=70000
 
 # Sleep
 CONFIG_ZMK_IDLE_TIMEOUT=30000
