--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,8 @@
 include:
   - board: nice_nano_v2
     shield: newage_left nice_view_custom
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y 
   - board: nice_nano_v2
     shield: newage_right nice_view_custom
   - board: nice_nano_v2
